--- a/cover.css
+++ b/cover.css
@@ -46,7 +46,7 @@ body {
 
 body {
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
-    background: #fff url("https://www.paypalobjects.com/webstatic/developer/banners/Braintree_desktop_BG_2X.jpg") repeat-y top right;
+    background: #fff url("img/conichi_code.png") repeat-y top right;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
